# last30days-skill

./: .gitattributes  .gitignore  .skillignore  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTORS.md  README.md  gemini-extension.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: osv-scanner.yml  release.yml  scorecard.yml  security.yml  validate.yml  zizmor.yml
docs/reference/: old-nux-wizard-v3.0.0.md
docs/solutions/architecture/: search-quality-eval-manual-by-default-2026-05-10.md
hooks/scripts/: check-config.sh
mcp/: go.mod  go.sum  manifest.json
mcp/internal/tools/: research.go  research_test.go
skills/last30days/: SKILL.md
skills/last30days/scripts/: briefing.py  evaluate_search_quality.py  last30days.py  store.py  watchlist.py
skills/last30days/scripts/lib/: bluesky.py  chrome_cookies.py  cookie_extract.py  (+17 more)
tests/: test_briefing_v3.py  test_chrome_cookies.py  test_chromium_browsers.py  test_cli_v3.py  test_codex_host_contract.py  test_cookie_extract.py  test_doc_flag_contract.py  test_doc_security_contract.py  test_env_cookies.py  test_evaluator_v3.py  test_hackernews.py  test_hiring_signals.py  test_hosted.py  test_html_render.py  test_instagram_sc.py  test_last_run_state.py  test_onboarding_contract.py  test_project_config_trust.py  test_quality_nudge.py  test_query.py  test_render_v3.py  test_security_boundaries.py  test_security_workflow.py  test_setup_openclaw.py  test_setup_wizard.py  test_store.py  test_subproc.py  test_watchlist_commands.py  test_watchlist_delivery.py
